horizontal scroll fixes

--- a/src/scss/block/dataview/view/calendar.scss
+++ b/src/scss/block/dataview/view/calendar.scss
@@ -16,9 +16,6 @@
 				}
 
 				> .body { overflow: scroll; border-color: var(--color-shape-secondary); border-style: solid; border-bottom-width: 1px;  }
-				> .body::-webkit-scrollbar { width: 6px; height: 0px; }
-				> .body::-webkit-scrollbar-track { background: transparent; }
-				> .body::-webkit-scrollbar-thumb { background: var(--color-control-active); border-radius: 3px; }
 			}
 
 			.day { 
